--- a/2ndYear.html
+++ b/2ndYear.html
@@ -65,13 +65,13 @@
 <div class="dropdown">
   <button class="dropbtn">Choose Your Branch</button>
   <div class="dropdown-content">
-    <a href="civil/civil2.html">Civil</a>
-    <a href="chemical/chemical2.html">Chemical</a>
-    <a href="computer/computer2.html">Computer</a>
-    <a href="electronics/electronics2.html">Electronics</a>
-    <a href="electrical/electrical2.html">Electrical</a>
-    <a href="mechanical/mechanical2.html">Mechanical</a>
-    <a href="PetroChemical/PetroChemical2.html">PetroChemical</a>
+    <a class="btn btn-primary" href="civil/civil2.html">Civil</a>
+    <a class="btn btn-primary" href="chemical/chemical2.html">Chemical</a>
+    <a class="btn btn-primary" href="computer/computer2.html">Computer</a>
+    <a class="btn btn-primary" href="electronics/electronics2.html">Electronics</a>
+    <a class="btn btn-primary" href="electrical/electrical2.html">Electrical</a>
+    <a class="btn btn-primary" href="mechanical/mechanical2.html">Mechanical</a>
+    <a class="btn btn-primary" href="PetroChemical/PetroChemical2.html">PetroChemical</a>
   </div>
 </div>
 <br><br>
