--- a/2ndYear.html
+++ b/2ndYear.html
@@ -63,7 +63,7 @@
 			<p class="lead"></p>
 
 <div class="dropdown">
-  <button class="dropbtn">Choose Your Branch</button>
+  <button onclick="toggle('dropdown-content')" class="dropbtn">Choose Your Branch</button>
   <div class="dropdown-content">
     <a class="btn btn-primary" href="civil/civil2.html">Civil</a>
     <a class="btn btn-primary" href="chemical/chemical2.html">Chemical</a>
